--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,49 +7,36 @@
     width: 100%;
     height: auto;
 }
-
-/*  */
-.viewer-comics {
-    /* width: 100%;
-    height: 100%; */
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-
-    height: 100vh;
-    width: 100vw;
-    display: none;
-    overflow: hidden;
+/* --------------------------------------- 
+              
+------------------------------------------ */
+#app {
+    min-height: 100vh;
 }
+.main-view {
+    min-height: calc(100vh - 40px);
+    /* min-height: calc(100%); */
+}
+/* --------------------------------------- 
+             
+------------------------------------------ */
 
-.viewer-comics .overlay{
-    background: rgba(0,0,0,0.8);
-    width: 100%;
-    height: 100%;
-}
-.viewer-comics .close{
-    padding: 10px;
-    color: #fff;
-}
-.viewer-comics .dialog{
-    background: rgba(0,0,0,0.8);
-    width: 80%;
-    height: 80%;
-    margin: 0 auto;
-    margin-top: 20px;
-    background: #fff;
-    z-index: 22;
-    overflow: hidden;
+/* --------------------------------------- 
+                home 
+------------------------------------------ */
+.block-home {
+    height: calc(100vh - 40px);
+    display: flex;
+    padding-top: 20%;
+    background: rgb(192, 192, 192);
     overflow-y: auto;
 }
-
-.viewer-comics .viewer-comics__media {
-    
+.block-home__left {
+    width: 60%;
 }
-
-.viewer-comics .viewer-comics__media img {
-    max-width: 100%;
-    height: auto;
+.block-home__right {
+    width: 40%;
 }
+/* --------------------------------------- 
+             fin - home 
+------------------------------------------ */
