--- a/src/css/component-comics.css
+++ b/src/css/component-comics.css
@@ -1,47 +1,73 @@
-.comics {
+.comics-cards  {
     border: 1px solid;
     padding: 15px;
     box-sizing: border-box;
     margin-top: 10px;
     margin-bottom: 10px;
+    min-height: 320px;
 }
 
 .comics-grid {
     display: grid;
     grid-template-columns: 200px 1fr;
-    grid-template-rows: 100fr  25px;
+    grid-template-rows: 1fr 25px;
 }
-/* .comics-grid {
-    display: grid;
-    grid-template-columns: ;
-    grid-template-rows: ;
-}
-.comics-grid {
-    display: grid;
-    grid-template-columns: ;
-    grid-template-rows: ;
-} */
-
-.comics .area-media {
+.comics-cards .area-media {
     grid-column: 1;
     grid-row: 1 / 3;
 
     padding: 8px;
 }
-.comics .area-content {
+.comics-cards .area-content {
     grid-column: 2;
     grid-row: 1 / 2;
 
     padding: 8px;
 }
-.comics .area-action {
+.comics-cards .area-action {
     grid-column: 2;
     grid-row: 2 / 3;
 
     padding: 8px;
 }
+.area-media__content {
+    max-height: 50px;
+}
+@media (min-width: 576px) {
+    
+}
+@media (min-width: 768px) {
+    .comics-grid {
+        display: grid;
+        grid-template-columns: 200px 1fr;
+        grid-template-rows: 1fr 25px;
+    }
+    .comics-cards .area-media {
+        grid-column: 1;
+        grid-row: 1 / 3;
+    
+        padding: 8px;
+    }
+    .comics-cards .area-content {
+        grid-column: 2;
+        grid-row: 1 / 2;
+    
+        padding: 8px;
+    }
+    .comics-cards .area-action {
+        grid-column: 2;
+        grid-row: 2 / 3;
+    
+        padding: 8px;
+    }
+}
+@media (min-width: 992px) {
+    
+}
 
-img {
+.area-media__content img {
     max-width: 100%;
+    max-height: 100%;
+    width: auto;
     height: auto;
 }
