--- a/src/css/component-viewer.css
+++ b/src/css/component-viewer.css
@@ -1,10 +1,10 @@
 /* `<div class="viewer-comics">
-                <div class="viewer-comics__overlay"></div>
-                <div class="viewer-comics__contain">
-                    <div class="viewer-comics__settings"></div>
-                    <div class="viewer-comics__content"></div>
-                </div>
-            </div>` */
+        <div class="viewer-comics__overlay"></div>
+        <div class="viewer-comics__contain">
+            <div class="viewer-comics__settings"></div>
+            <div class="viewer-comics__content"></div>
+        </div>
+    </div>` */
 
 .viewer-comics {
     position: absolute;
@@ -15,28 +15,17 @@
 
     height: 100vh;
     width: 100vw;
-    /* display: none; */
+
     background: rgba(0,0,0,0.8);
     overflow: hidden;
+    z-index: 99999999;
 }
 
-/* .viewer-comics__overlay{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.8);
-} */
 .viewer-comics .close{
     padding: 10px;
     color: #fff;
 }
 .viewer-comics__contain {
-    /* width: 80%;
-    height: 80%; */
     width: 100%;
     height: 100%;
     background: #fff;
@@ -67,10 +56,6 @@
     margin: 0 auto;
     border: 1px solid;
 }
-/* .viewer-comics .viewer-comics__media img {
-    max-width: 100%;
-    height: auto;
-} */
 
 @media (min-width: 576px) {
     .viewer-comics__media {
